# siteops-final

./: GEMINI_SETUP.md  LATEST_FEATURES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SUPABASE_SETUP.md  SUPABASE_STORAGE_SETUP.md  env.example  pyproject.toml  requirements.txt  supabase_schema.sql  test_detection.py  test_supabase.py
config/: calibration.json  settings.yaml
data/: vehicles.json
logs/: .gitkeep  events.ndjson
src/: __init__.py  alerts.py  camera.py  config.py  depth.py  detection.py  fall_detection.py  headcount.py  main.py  overlay.py  proximity.py  registry.py  server.py  supabase_client.py  tracking.py
tests/: __init__.py  test_event_debounce.py  test_proximity_score.py  test_websocket_client.py
web/: README.md  check-models.js  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/alerts/: page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/site-agent/: route.ts
web/src/app/camera/: page.tsx
web/src/app/chat/: page.tsx
web/src/app/machines/: page.tsx
web/src/app/people/: page.tsx
web/src/app/site-agent/: page.tsx
web/src/app/tickets/: page.tsx
web/src/components/: acknowledge-alert-button.tsx  add-machine-dialog.tsx  add-person-dialog.tsx  add-ticket-dialog.tsx  chat-widget.tsx  nav.tsx
web/src/lib/: supabase.ts
web/src/types/: database.ts
