[project]
name = "siteops-safety-mvp"
version = "0.1.0"
description = "ML-powered construction site safety monitoring system"
authors = [{name = "SiteOps Team"}]
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
